# firebolt-openrpc

./: .gitignore  package-lock.json  package.json
src/: cli.mjs
src/c++/sdk/: CMakeLists.txt  OpenRPCNativeSDK.conf.in  Params.config  SDKHeaders.h
src/c++/sdk/Properties/: CMakeLists.txt  Properties.cpp  Properties.h
src/c++/sdk/Services/: CMakeLists.txt  Config.h  Services.cpp  Services.h
src/c++/sdk/Tests/: CMakeLists.txt  OpenRPCTests.cpp  OpenRPCTests.h  Tests.h
src/c++/sdk/Tests/App/: CMakeLists.txt  Module.h  OpenRPCTestsMain.cpp
src/c++/sdk/Transport/: CMakeLists.txt  JsonRpcTransport.cpp  JsonRpcTransport.h  Module.h  Transport.cpp  Transport.h
src/c++/sdk/scripts/: install.js
src/modules/: test.json
src/native/: CMakeLists.txt
src/native-c/: CMakeLists.txt  build-openrpc.sh
src/native-c/cmake/: HelperFunctions.cmake  project.cmake.in
src/native-c/include/: Types.h
src/native-c/scripts/: install.js  installsdk.sh
src/native-c/src/: CMakeLists.txt  Firebolt.cpp  Types.cpp
src/native-c/src/Accessor/: Accessor.cpp  Accessor.h  Config.h  WorkerPool.h
src/native-c/src/Event/: Event.cpp  Event.h
src/native-c/src/Properties/: Properties.h
src/native-c/src/Transport/: Transport.h
src/native-c/test/: OpenRPCCTests.h  OpenRPCTests.cpp  OpenRPCTests.h  TestUtils.h
src/native-c/thunder/scripts/: prepare.sh  setup.sh
src/native/cmake/: HelperFunctions.cmake  project.cmake.in
src/native/include/: Firebolt.h
src/native/sdk/: CMakeLists.txt  Config.cmake  Error.h
src/native/sdk/Accessor/: Accessor.cpp  Accessor.h  WorkerPool.h
src/native/sdk/Properties/: Event.cpp  Event.h  Properties.h
src/native/sdk/Scripts/: install.js
src/native/sdk/Source/: CMakeLists.txt  Error.h  Firebolt.h  FireboltSDK.conf.in  Params.config  SDKHeaders.h  Types.cpp  Types.h
src/native/sdk/Source/Accessor/: Accessor.cpp  Accessor.h  Config.h  WorkerPool.h
src/native/sdk/Source/Event/: Event.cpp  Event.h
src/native/sdk/Source/Properties/: Properties.h
src/native/sdk/Source/Transport/: Transport.h
src/native/sdk/Tests/: CMakeLists.txt  FireboltSDKTests.c  FireboltSDKTests.cpp  FireboltSDKTests.h  Tests.h  fireboltsdktest.h
src/native/sdk/Tests/App/: CMakeLists.txt  FireboltSDKTestsMain.c  FireboltSDKTestsMain.cpp
src/native/sdk/Transport/: Transport.cpp  Transport.h
src/native/sdk/cmake/: project.cmake.in
src/native/sdk/scripts/: install.js
src/native/src/: CMakeLists.txt  Error.h  Firebolt.h  Logger.cpp  Module.h  Types.cpp  Types.h  TypesPriv.h
src/native/src/Accessor/: Accessor.cpp  Accessor.h  Config.h
src/native/src/Event/: Event.cpp  Event.h
src/native/src/Logger/: Logger.cpp  Logger.h
src/native/src/Properties/: Properties.h
src/native/src/Transport/: Transport.h
src/native/test/: CMakeLists.txt  FireboltSDKTests.cpp  FireboltSDKTests.h  FireboltSDKTestsMain.c  OpenRPCTests.cpp  OpenRPCTests.h  fireboltsdktest.h
src/native/test/App/: CMakeLists.txt  FireboltSDKTestsMain.c
src/schemas/: types.json
thunder/scripts/: clean.sh  prepare.sh  setup.sh
util/: index.mjs
util/native-c/sdk/: index.mjs
util/native-c/sdk/headers/: index.mjs
util/native-c/sdk/implementation/: index.mjs
util/native-c/shared/: cpphelpers.mjs  nativehelpers.mjs
util/sdk/: index.js
util/sdk/cpp/: index.mjs
util/sdk/cpp/headers/: index.mjs
util/sdk/javascript/: index.mjs
util/sdk/javascript/macros/: index.mjs
util/sdk/native/: index.mjs
util/sdk/native-c/: index.mjs
util/sdk/native-c/headers/: index.mjs
util/sdk/native-c/implementation/: index.mjs
util/sdk/native/headers/: index.mjs
util/shared/: cpphelpers.mjs  json-schema.mjs  nativehelpers.mjs  typescript.mjs
